dataset1235/2025-2/805158916/users/1639372129/executions/2651470117_4233865845.log
== RUN (2025-08-17 03:05:30)
-- CODE: 

fah = input("escreva um numero:")(fah = cel*9/5+32)
print(fah = cel*9/5+32)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fah = input("escreva um numero:")(fah = cel*9/5+32)
                                            ^^^
NameError: name 'cel' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fah = input("escreva um numero:")(fah = cel*9/5+32)
                                            ^^^
NameError: name 'cel' is not defined
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fah = input("escreva um numero:")(fah = cel*9/5+32)
                                            ^^^
NameError: name 'cel' is not defined
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fah = input("escreva um numero:")(fah = cel*9/5+32)
                                            ^^^
NameError: name 'cel' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fah = input("escreva um numero:")(fah = cel*9/5+32)
                                            ^^^
NameError: name 'cel' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fah = input("escreva um numero:")(fah = cel*9/5+32)
                                            ^^^
NameError: name 'cel' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-17 03:14:54)
-- CODE: 
num = int(input("digite um numero: "))
print(num*9/5+32)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num = int(input("digite um numero: "))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '-40.0'
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num = int(input("digite um numero: "))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '-10.0'
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num = int(input("digite um numero: "))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '100.0'
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num = int(input("digite um numero: "))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '20.25'
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num = int(input("digite um numero: "))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '0.0'
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num = int(input("digite um numero: "))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '30.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-17 03:17:56)
-- CODE: 
num = float(input("digite um numero: "))
print(round(num, 2)num*9/5+32)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 2
    print(round(num, 2)num*9/5+32)
          ^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 2
    print(round(num, 2)num*9/5+32)
          ^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 2
    print(round(num, 2)num*9/5+32)
          ^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 2
    print(round(num, 2)num*9/5+32)
          ^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 2
    print(round(num, 2)num*9/5+32)
          ^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 2
    print(round(num, 2)num*9/5+32)
          ^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-17 03:07:38)
-- CODE: 

cel = input("escreva um numero:")
print(fah = cel*9/5+32)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(fah = cel*9/5+32)
                ~~~~~^~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(fah = cel*9/5+32)
                ~~~~~^~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(fah = cel*9/5+32)
                ~~~~~^~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(fah = cel*9/5+32)
                ~~~~~^~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(fah = cel*9/5+32)
                ~~~~~^~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(fah = cel*9/5+32)
                ~~~~~^~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-17 03:00:48)
-- CODE: 

fah = input(fah = cel*9/5+32)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fah = input(fah = cel*9/5+32)
                      ^^^
NameError: name 'cel' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fah = input(fah = cel*9/5+32)
                      ^^^
NameError: name 'cel' is not defined
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fah = input(fah = cel*9/5+32)
                      ^^^
NameError: name 'cel' is not defined
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fah = input(fah = cel*9/5+32)
                      ^^^
NameError: name 'cel' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fah = input(fah = cel*9/5+32)
                      ^^^
NameError: name 'cel' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fah = input(fah = cel*9/5+32)
                      ^^^
NameError: name 'cel' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-17 03:20:18)
-- CODE: 
num = float(input("digite um numero: "))
print(num*9/5+32)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
digite um numero: -40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
digite um numero: 14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
digite um numero: 212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
digite um numero: 68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
digite um numero: 32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
digite um numero: 86.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-17 03:21:37)
-- CODE: 
num = float(input("digite um numero: "))
print(num*9/5+32)
print(round(num, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
-10.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
100.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
20.25
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
0.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
30.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-17 19:04:56)
-- CODE: 
num = float(input("digite um numero: "))
round(num, 2)
print(num*9/5+32)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
digite um numero: -40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
digite um numero: 14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
digite um numero: 212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
digite um numero: 68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
digite um numero: 32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
digite um numero: 86.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-17 03:18:05)
-- CODE: 
num = float(input("digite um numero: "))
print(round(num, 2)(num*9/5+32)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 2
    print(round(num, 2)(num*9/5+32)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 2
    print(round(num, 2)(num*9/5+32)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 2
    print(round(num, 2)(num*9/5+32)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 2
    print(round(num, 2)(num*9/5+32)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 2
    print(round(num, 2)(num*9/5+32)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 2
    print(round(num, 2)(num*9/5+32)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-17 03:05:46)
-- CODE: 

fah = input("escreva um numero:")
print(fah = cel*9/5+32)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(fah = cel*9/5+32)
                ^^^
NameError: name 'cel' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(fah = cel*9/5+32)
                ^^^
NameError: name 'cel' is not defined
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(fah = cel*9/5+32)
                ^^^
NameError: name 'cel' is not defined
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(fah = cel*9/5+32)
                ^^^
NameError: name 'cel' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(fah = cel*9/5+32)
                ^^^
NameError: name 'cel' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(fah = cel*9/5+32)
                ^^^
NameError: name 'cel' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-17 03:18:43)
-- CODE: 
num = float(input("digite um numero: "))
print(num*9/5+32(round(num, 2)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 2
    print(num*9/5+32(round(num, 2)
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 2
    print(num*9/5+32(round(num, 2)
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 2
    print(num*9/5+32(round(num, 2)
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 2
    print(num*9/5+32(round(num, 2)
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 2
    print(num*9/5+32(round(num, 2)
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 2
    print(num*9/5+32(round(num, 2)
                    ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-17 03:28:25)
-- CODE: 
num = float(input("digite um numero: "))
print(round(float)(x,2(num*9/5+32)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 2
    print(round(float)(x,2(num*9/5+32)
                      ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 2
    print(round(float)(x,2(num*9/5+32)
                      ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 2
    print(round(float)(x,2(num*9/5+32)
                      ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 2
    print(round(float)(x,2(num*9/5+32)
                      ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 2
    print(round(float)(x,2(num*9/5+32)
                      ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 2
    print(round(float)(x,2(num*9/5+32)
                      ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-17 03:20:09)
-- CODE: 
num = float(input("digite um numero: "))
print(num*9/5+32)
print(round(num, 2)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 3
    print(round(num, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 3
    print(round(num, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 3
    print(round(num, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 3
    print(round(num, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(round(num, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 3
    print(round(num, 2)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-17 03:03:39)
-- CODE: 

fah = input(fah = cel*9/5+32)
print(fah)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fah = input(fah = cel*9/5+32)
                      ^^^
NameError: name 'cel' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fah = input(fah = cel*9/5+32)
                      ^^^
NameError: name 'cel' is not defined
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fah = input(fah = cel*9/5+32)
                      ^^^
NameError: name 'cel' is not defined
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fah = input(fah = cel*9/5+32)
                      ^^^
NameError: name 'cel' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fah = input(fah = cel*9/5+32)
                      ^^^
NameError: name 'cel' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fah = input(fah = cel*9/5+32)
                      ^^^
NameError: name 'cel' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-17 03:10:32)
-- CODE: 

fah = input("escreva um numero:")
fah = cel*9/5+32
print(fah)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fah = cel*9/5+32
          ^^^
NameError: name 'cel' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fah = cel*9/5+32
          ^^^
NameError: name 'cel' is not defined
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fah = cel*9/5+32
          ^^^
NameError: name 'cel' is not defined
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fah = cel*9/5+32
          ^^^
NameError: name 'cel' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fah = cel*9/5+32
          ^^^
NameError: name 'cel' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fah = cel*9/5+32
          ^^^
NameError: name 'cel' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-17 03:27:04)
-- CODE: 
num = float(input("digite um numero: "))
print(round(x,2 num*9/5+32)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 2
    print(round(x,2 num*9/5+32)
                  ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 2
    print(round(x,2 num*9/5+32)
                  ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 2
    print(round(x,2 num*9/5+32)
                  ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 2
    print(round(x,2 num*9/5+32)
                  ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 2
    print(round(x,2 num*9/5+32)
                  ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 2
    print(round(x,2 num*9/5+32)
                  ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-17 03:27:14)
-- CODE: 
num = float(input("digite um numero: "))
print(round(x,2) num*9/5+32)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 2
    print(round(x,2) num*9/5+32)
          ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 2
    print(round(x,2) num*9/5+32)
          ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 2
    print(round(x,2) num*9/5+32)
          ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 2
    print(round(x,2) num*9/5+32)
          ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 2
    print(round(x,2) num*9/5+32)
          ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 2
    print(round(x,2) num*9/5+32)
          ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-17 03:27:30)
-- CODE: 
num = float(input("digite um numero: "))
print(round(x,2(num*9/5+32)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 2
    print(round(x,2(num*9/5+32)
               ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 2
    print(round(x,2(num*9/5+32)
               ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 2
    print(round(x,2(num*9/5+32)
               ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 2
    print(round(x,2(num*9/5+32)
               ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 2
    print(round(x,2(num*9/5+32)
               ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 2
    print(round(x,2(num*9/5+32)
               ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-17 03:20:27)
-- CODE: 
num = float(input("digite um numero: "))
print(num*9/5+32)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
digite um numero: -40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
digite um numero: 14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
digite um numero: 212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
digite um numero: 68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
digite um numero: 32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
digite um numero: 86.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-17 03:29:42)
-- CODE: 
num = float(input("digite um numero: "))
round(num, 2)
print(num*9/5+32)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
digite um numero: -40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
digite um numero: 14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
digite um numero: 212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
digite um numero: 68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
digite um numero: 32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
digite um numero: 86.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-17 03:04:36)
-- CODE: 

fah = input("escreva um numero:"(fah = cel*9/5+32)
print(fah)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 2
    fah = input("escreva um numero:"(fah = cel*9/5+32)
               ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 2
    fah = input("escreva um numero:"(fah = cel*9/5+32)
               ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 2
    fah = input("escreva um numero:"(fah = cel*9/5+32)
               ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 2
    fah = input("escreva um numero:"(fah = cel*9/5+32)
               ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 2
    fah = input("escreva um numero:"(fah = cel*9/5+32)
               ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 2
    fah = input("escreva um numero:"(fah = cel*9/5+32)
               ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-17 03:22:45)
-- CODE: 
num = float(input("digite um numero: "))
print(num*9/5+32)(round(num, 2))
print(round(num, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(num*9/5+32)(round(num, 2))
TypeError: 'NoneType' object is not callable
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(num*9/5+32)(round(num, 2))
TypeError: 'NoneType' object is not callable
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(num*9/5+32)(round(num, 2))
TypeError: 'NoneType' object is not callable
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(num*9/5+32)(round(num, 2))
TypeError: 'NoneType' object is not callable
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(num*9/5+32)(round(num, 2))
TypeError: 'NoneType' object is not callable
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(num*9/5+32)(round(num, 2))
TypeError: 'NoneType' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-17 03:27:26)
-- CODE: 
num = float(input("digite um numero: "))
print(round(x,2)(num*9/5+32)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 2
    print(round(x,2)(num*9/5+32)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 2
    print(round(x,2)(num*9/5+32)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 2
    print(round(x,2)(num*9/5+32)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 2
    print(round(x,2)(num*9/5+32)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 2
    print(round(x,2)(num*9/5+32)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 2
    print(round(x,2)(num*9/5+32)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-17 03:04:42)
-- CODE: 

fah = input("escreva um numero:")(fah = cel*9/5+32)
print(fah)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fah = input("escreva um numero:")(fah = cel*9/5+32)
                                            ^^^
NameError: name 'cel' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fah = input("escreva um numero:")(fah = cel*9/5+32)
                                            ^^^
NameError: name 'cel' is not defined
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fah = input("escreva um numero:")(fah = cel*9/5+32)
                                            ^^^
NameError: name 'cel' is not defined
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fah = input("escreva um numero:")(fah = cel*9/5+32)
                                            ^^^
NameError: name 'cel' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fah = input("escreva um numero:")(fah = cel*9/5+32)
                                            ^^^
NameError: name 'cel' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fah = input("escreva um numero:")(fah = cel*9/5+32)
                                            ^^^
NameError: name 'cel' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-17 03:15:54)
-- CODE: 
num = float(input("digite um numero: "))
print(num*9/5+32)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
digite um numero: -40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
digite um numero: 14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
digite um numero: 212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
digite um numero: 68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
digite um numero: 32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
digite um numero: 86.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-17 03:29:59)
-- CODE: 
num = float(input("digite um numero: "))
round(num, 2)
print(num*9/5+32)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
digite um numero: -40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
digite um numero: 14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
digite um numero: 212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
digite um numero: 68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
digite um numero: 32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
digite um numero: 86.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-17 03:31:34)
-- CODE: 
num = float(input("digite um numero: "))
round(num, 2)
print(num*9/5+32)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
digite um numero: -40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
digite um numero: 14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
digite um numero: 212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
digite um numero: 68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
digite um numero: 32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
digite um numero: 86.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-17 03:02:26)
-- CODE: 

fah = input(fah = cel*9/5+32)
print("digite um numero: ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fah = input(fah = cel*9/5+32)
                      ^^^
NameError: name 'cel' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fah = input(fah = cel*9/5+32)
                      ^^^
NameError: name 'cel' is not defined
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fah = input(fah = cel*9/5+32)
                      ^^^
NameError: name 'cel' is not defined
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fah = input(fah = cel*9/5+32)
                      ^^^
NameError: name 'cel' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fah = input(fah = cel*9/5+32)
                      ^^^
NameError: name 'cel' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fah = input(fah = cel*9/5+32)
                      ^^^
NameError: name 'cel' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
